week 03 -Project: Quiz Part 1
