# backend/models/csharpModel.js
@@ -1,0 +1,20 @@
+const mongoose = require('mongoose');
+
+const cSharpSchema = new mongoose.Schema({
+  question: {
+    type: String,
+    required: true,
+  },
+  choices: {
+    type: mongoose.Schema.Types.Mixed,
+    required: true,
+  },
+  answer: {
+    type: String,
+    required: true,
+  },
+});
+
+const CSharp = mongoose.model('CSharp', cSharpSchema);
+
+module.exports = CSharp;
